--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:8000"
     volumes:
       - ./data:/app/data
+    network_mode: "host"
     restart: unless-stopped
     environment:
       - TZ=UTC
